--- a/src/app/home/pregunta-uno/pregunta-uno.component.html
+++ b/src/app/home/pregunta-uno/pregunta-uno.component.html
@@ -1,20 +1,19 @@
 <div class="container">
     <h1>Estacionamiento</h1>
     <form (ngSubmit)="calcularTotal()">
-        <mat-form-group>
-            <mat-label>Horas:</mat-label>
-            <input type="number" matInput class="form-control" id="horas" [(ngModel)]="horas">
-        </mat-form-group>
 
-        <mat-form-group>
-            <mat-label>Minutos:</mat-label>
-            <input type="number" matInput class="form-control" id="minutos" [(ngModel)]="minutos">
-        </mat-form-group>
+        <mat-label>Horas:</mat-label>
+        <input type="text" matInput class="form-control" id="horas" [(ngModel)]="objEstacionamiento.horas">
 
-        <button type="submit" mat-raised-button color="primary">Calcular</button>
+
+
+        <mat-label>Minutos:</mat-label>
+        <input type="number" matInput class="form-control" id="minutos" [(ngModel)]="objEstacionamiento.minutos">
+
+        <button type="submit" mat-raised-button color="primary" (click)="calcularTotal">Calcular</button>
     </form>
 
     <div class="total">
-        Total: {{total | currency}}
+        Total: {{objEstacionamiento.total | currency}}
     </div>
 </div>
