--- a/src/app/home/pregunta-uno/pregunta-uno.component.html
+++ b/src/app/home/pregunta-uno/pregunta-uno.component.html
@@ -3,17 +3,18 @@
     <form (ngSubmit)="calcularTotal()">
 
         <mat-label>Horas:</mat-label>
-        <input type="text" matInput class="form-control" id="horas" [(ngModel)]="objEstacionamiento.horas">
+        <input type="number" matInput class="form-control" id="horas" [(ngModel)]="horas">
 
 
 
         <mat-label>Minutos:</mat-label>
-        <input type="number" matInput class="form-control" id="minutos" [(ngModel)]="objEstacionamiento.minutos">
+        <input type="number" matInput class="form-control" id="minutos" [(ngModel)]="minutos">
 
-        <button type="submit" mat-raised-button color="primary" (click)="calcularTotal">Calcular</button>
+
+        <button type="submit" mat-raised-button color="primary">Calcular</button>
     </form>
 
     <div class="total">
-        Total: {{objEstacionamiento.total | currency}}
+        Total: {{total}}
     </div>
 </div>
